// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection.addEvent 1`] = `
Object {
  "Collection": Object {
    "__typename": "Collection",
    "timeline": Array [
      Object {
        "__typename": "Event",
        "title": "Test",
      },
    ],
    "title": "Test",
  },
}
`;

exports[`Collection.clearLocation 1`] = `
Object {
  "Collection": Object {
    "__typename": "Collection",
    "location": null,
    "title": "Test",
  },
}
`;

exports[`Collection.createAtLocation 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "collections": Array [
      Object {
        "__typename": "Collection",
        "class": Object {
          "__typename": "Concept",
          "title": "Test",
        },
        "owners": Array [],
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "Collection.createAtLocation",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;

exports[`Collection.createForPerson 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "collections": Array [
      Object {
        "__typename": "Collection",
        "class": Object {
          "__typename": "Concept",
          "title": "Test",
        },
        "owners": Array [
          Object {
            "__typename": "Person",
            "title": "Test",
          },
        ],
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "Collection.createForPerson",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;

exports[`Collection.createInSpace 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "collections": Array [
      Object {
        "__typename": "Collection",
        "class": Object {
          "__typename": "Concept",
          "title": "Test",
        },
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "Collection.createInSpace",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;

exports[`Collection.createInstance 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "collections": Array [
      Object {
        "__typename": "Collection",
        "class": Object {
          "__typename": "Concept",
          "title": "Test",
        },
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "Collection.createInstance",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;

exports[`Collection.removeEvent 1`] = `
Object {
  "Collection": Object {
    "__typename": "Collection",
    "class": Object {
      "__typename": "Concept",
      "title": "Test",
    },
    "timeline": Array [],
    "title": "Test",
  },
}
`;

exports[`Collection.setClass 1`] = `
Object {
  "Collection": Object {
    "__typename": "Collection",
    "class": Object {
      "__typename": "Concept",
      "title": "Test2",
    },
    "title": "Test",
  },
}
`;

exports[`Collection.setLocation 1`] = `
Object {
  "Collection": Object {
    "__typename": "Collection",
    "class": Object {
      "__typename": "Concept",
      "title": "Test",
    },
    "location": Object {
      "__typename": "Location",
      "title": "Test2",
    },
    "title": "Test",
  },
}
`;

exports[`Concept.createInSpace 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "concepts": Array [
      Object {
        "__typename": "Concept",
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "Concept.createInSpace",
          },
        ],
        "title": "Test",
      },
    ],
    "rootConcepts": Array [
      Object {
        "__typename": "Concept",
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "Concept.createInSpace",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;
